good: migrate from drizzle to zapatos, custom-code to pgmigrate, and other best practices
